--- a/challenge03/index.html
+++ b/challenge03/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>>Responsive Challenge</title>
+    <title>Responsive Challenge</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="hero">
-            <p>
-                Responsive layouts don’t have to be a struggle
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                enim ad minim veniam.
-
-                <a href="#">I WANT TO LEARN</a>
-            </p>
-        </div>
-    </header>
+    <div class="header">
+        <header class="container">
+            <div class="hero">
+                <h1>Responsive layouts don’t have to be a struggle</h1> 
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                    enim ad minim veniam.
+                </p>
+                <button>I WANT TO LEARN</button>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
