--- a/Flexbox challenge 2/index.html
+++ b/Flexbox challenge 2/index.html
@@ -15,10 +15,20 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 <a href="#" class="btn">I want to learn</a>
             </div>
+            <div class="hero-img">
+                <img src="img/hero-img.jpg" alt="">
+            </div>
         </div>
     </div> 
 
-    
+    <main class="main_body">
+        <section>
+
+        </section>
+        <aside>
+
+        </aside>
+    </main>
 
 </body>
 </html>
