Main section completed

--- a/Flexbox challenge 2/index.html
+++ b/Flexbox challenge 2/index.html
@@ -21,11 +21,20 @@
         </div>
     </div> 
 
-    <main class="main_body">
-        <section>
+    <main class="container row">
+        <section class=" main_text">
+            <h1>
+                Quality designs made custom, on demand, just for you
+            </h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            </p>
 
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            </p>
         </section>
-        <aside>
+        <aside class="sidebar">
 
         </aside>
     </main>
