--- a/Flexbox challenge 2/index.html
+++ b/Flexbox challenge 2/index.html
@@ -21,11 +21,11 @@
         </div>
     </div> 
 
-    <main class="container row">
+    <main class="main container row">
         <section class=" main_text">
-            <h1>
+            <h2>
                 Quality designs made custom, on demand, just for you
-            </h1>
+            </h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
             </p>
@@ -34,22 +34,17 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
             </p>
         </section>
-        
+
         <aside class="sidebar">
-            <div class="cards">
+            
                 <h2>Cheap</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            </div>
 
-            <div class="cards">
                 <h2>Cheap</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            </div>
 
-            <div class="cards">
                 <h2>Cheap</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            </div>
         </aside>
     </main>
 
