--- a/nav-challenge/index.html
+++ b/nav-challenge/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav class="nav">
+    <header class="">
+        <nav class="container nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">About</a></li>
