create page structure

--- a/Final_Challenge/index.html
+++ b/Final_Challenge/index.html
@@ -7,5 +7,164 @@
 </head>
 <body>
     
+    <header>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact</li>
+                <li>Sign In</li>
+                <li>Sign Up</li>
+            </ul>
+        </nav>
+        <section>
+            <h1>
+                Responsive layouts <span>don't have to be a struggle</span>
+            </h1>
+            <article>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Reprehenderit molestiae esse excepturi nihil, deserunt 
+                    dicta aut fugit eius voluptatum? Labore perspiciatis magni 
+                    unde totam eius quidem quos fugiat laborum exercitationem!
+                </p>
+                <button>i want to learn</button>
+            </article>
+        </section>
+    </header>
+
+    <main>
+        <section>
+
+            <article>
+                <h2>Mobile-first</h2>
+                <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Earum itaque corrupti consequuntur! Eaque accusantium, omnis 
+                fuga itaque, illo vel delectus distinctio est dolorum necessitatibus
+                error quam ea quibusdam? Illo, dicta.
+                </p>
+            </article>
+
+            <article>
+                <h2>Efficient</h2>
+                <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Earum itaque corrupti consequuntur! Eaque accusantium, omnis 
+                fuga itaque, illo vel delectus distinctio est dolorum necessitatibus
+                error quam ea quibusdam? Illo, dicta.
+                </p>
+            </article>
+
+            <article>
+                <h2>Done right</h2>
+                <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Earum itaque corrupti consequuntur! Eaque accusantium, omnis 
+                fuga itaque, illo vel delectus distinctio est dolorum necessitatibus
+                error quam ea quibusdam? Illo, dicta.
+                </p>
+
+            </article>
+
+        </section>
+
+        <section>
+
+            <article>
+                <h3>It doesn't have to be so hard</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+                <img src="" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+            </article>
+
+            <aside>
+
+               <article>
+                <h3>Break it down</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                </p>
+               </article> 
+
+               <article>
+                <h3>Work your way up</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                </p>
+               </article> 
+
+               <article>
+                <h3>Conquer the Design</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                </p>
+               </article> 
+
+            </aside>
+
+        </section>
+    </main>
+
+    <footer>
+        <h2>Just scratching the surface</h2>
+        
+        <section>
+            <h4>About our company</h4>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam. 
+            </p>
+        </section>
+
+        <section>
+            <section>
+                <h4>Getting around</h4>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+            </section>
+
+            <section>
+                <h4>Other things</h4>
+                <ul>
+                    <li>Lorem Ipsum</li>
+                    <li>dolor</li>
+                    <li>sit amet</li>
+                    <li>consectetur</li>
+                </ul>
+            </section>
+
+            <section>
+                <h4>And more</h4>
+                <ul>
+                    <li>Lorem Ipsum</li>
+                    <li>dolor</li>
+                    <li>sit amet</li>
+                    <li>consectetur</li>
+                </ul>
+            </section>
+
+        </section>
+
+    </footer>
+
 </body>
 </html>
